Migrate to poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,44 @@
+[tool.poetry]
+name = "package-constructor"
+version = "0.0.1"
+description = "All you need to build packages and applications in an air-gapped environment."
+authors = ["Luiz Costa <luiz@thenets.org>"]
+license = "GPL-2.0"
+readme = "README.md"
+
+# Dependencies
+[tool.poetry.dependencies]
+python = "^3.11"
+requests = "^2.31.0"
+click = "^8.1.7"
+openapi-python-client = "^0.15.2"
+PyYAML = "^6.0.1"
+Jinja2 = "^3.1.2"
+
+[tool.poetry.group.test]
+optional = true
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.3"
+
+[tool.poetry.group.dev]
+optional = true
+[tool.poetry.group.dev.dependencies]
+black = "*"
+ruff = "*"
+isort = "*"
+
+# Build
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+# Test
 [tool.pytest.ini_options]
-# directories containing tests
 testpaths = ["./src", "./tests"]
-
-# ignore
 norecursedirs = ["./venv/", "./cache/", "./.ruff_cache/", "./build/"]
-
-# force pattern for test content
 python_files = "*.py"
 python_functions = "test_* cli_*"
 python_classes = "Test*"
-
-# equivalent to pass the argument to pytest CLI
 addopts = [
     # increase verbosity
     "--verbose",
@@ -19,6 +47,4 @@ addopts = [
     # fail if there are markers not registered in this file
     # "--strict-markers",
     ]
-
-# define all the possible markers
 # markers = ["get", "post"]
