--- a/src/tests/scenario-simple.yml
+++ b/src/tests/scenario-simple.yml
@@ -43,8 +43,23 @@ packageManagers:
     includeDependencies: true
     # Dependencies. Must include the package name and version
     dependencies:
-      - cryptography==41.0.5
-      - ansible==8.6.1
+      # - cryptography==41.0.5
+      # - ansible==8.6.1
+      - aiohttp==3.8.6
+      - aiohttp-retry==2.8.3
+      - backoff==2.2.1
+      - beautifulsoup4==4.12.2
+      - gitpython==3.1.40
+      - packageurl-python==0.11.2
+      - packaging==23.2
+      - pydantic==2.5.0
+      - pypi-simple==1.4.0
+      - pyyaml==6.0.1
+      - requests==2.31.0
+      - semver==3.0.2
+      - setuptools==68.2.2
+      - tomli==2.0.1
+      - typer==0.9.0
 
 # Assuming "kind: containers", the container key is required
 # Each container will be built sequentially. You can chain them.
