--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ click = "^8.1.7"
 openapi-python-client = "^0.15.2"
 PyYAML = "^6.0.1"
 Jinja2 = "^3.1.2"
+schema = "^0.7.5"
 
 [tool.poetry.group.test]
 optional = true
@@ -42,7 +43,7 @@ pip-audit = "^2.6.1"
 # Test
 [tool.pytest.ini_options]
 testpaths = ["./src", "./tests"]
-norecursedirs = ["./venv/", "./cache/", "./.ruff_cache/", "./build/"]
+norecursedirs = ["./venv/", "./cache/", "./.ruff_cache/", "./build/", "cache"]
 python_files = "*.py"
 python_functions = "test_* cli_*"
 python_classes = "Test*"
